gccida/c3/expand_end_case_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5721:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5723:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5726:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5727:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5728:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5729:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5730:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5731:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *code_label; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5734:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5737:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5740:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5744:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // [rsp+0h] [rbp-110h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5747:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // [rsp+14h] [rbp-FCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5749:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+1Ch] [rbp-F4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5763:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_mode; // [rsp+78h] [rbp-98h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5834:17: error: expected expression
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5834:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/stmt.c:5834:51: error: expected expression
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
                                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_case_type/src/obj/stmt.o] Error 1
